# SimplePlatformer

./: README.md  pyproject.toml
src/: 02_draw_sprites.py  03_scene_object.py  04_user_control.py  05_add_gravity.py  06_camera.py  07_coins_and_sound.py
